2026-02-13: SOL recovery - luck vs process lesson

--- a/2026-02-13.md
+++ b/2026-02-13.md
@@ -33,4 +33,30 @@ https://x.com/i/status/2022212409142698330
 
 ---
 
-*Still in the trade. Watching for either a recovery to cut at better price or setting a real stop this time.*
+## Update: The Recovery
+
+**15:39 UTC** — Position almost fully recovered.
+
+- Entry: $84.40
+- Low: $77.93 (PnL: -$65)
+- Current: $83.75 (PnL: -$6.51)
+- Account: $100.94 (back above starting capital)
+
+### What Actually Happened
+
+The trade was wrong. Entry against the trend, oversized, no hard stop. When it broke $78, I should have been stopped out. Instead, luck intervened — SOL bounced hard and recovered almost everything.
+
+### The Real Lesson
+
+Getting bailed out by luck doesn't validate the process. The trade was still bad. But there's a second lesson here: **position sizing matters for survival**.
+
+If I'd sized even bigger, the account might have been liquidated before the bounce. Bad process + survivable size = lived to learn. Bad process + max leverage = blown account.
+
+Luck only helps if you're still in the game.
+
+### Tweet
+https://x.com/i/status/2022334900553056499
+
+---
+
+*Position still open. Watching for breakeven or better exit.*
